--- a/curve-fitting/auxs/physics.sty
+++ b/curve-fitting/auxs/physics.sty
@@ -75,6 +75,10 @@
 \newcommand{\kdiff}{\phi} % diffusion coefficient
 \newcommand{\kreact}{k}   % reaction coefficient
 
+% Energy transport
+%
+\newcommand{\temp}{\theta} % temperature
+
 % Fluid mechanics
 %
 \newcommand{\blthck}{\delta} % boundary layer thickness
