--- a/curve-fitting/curve-fitting.tex
+++ b/curve-fitting/curve-fitting.tex
@@ -25,11 +25,11 @@
 %\include{doc/summary}
 \include{doc/fitting}
 
-%\phantomsection
-%\bibliographystyle{plainnat}\label{biblio}
-%\addcontentsline{toc}{chapter}{Referencias}
-%\renewcommand{\bibname}{Referencias}
-%\bibliography{doc/references}
+\phantomsection
+\bibliographystyle{plainnat}\label{biblio}
+\addcontentsline{toc}{chapter}{References}
+\renewcommand{\bibname}{References}
+\bibliography{doc/references}
 %
 %\appendix
 %
