--- a/curve-fitting/doc/references.bib
+++ b/curve-fitting/doc/references.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-06-24 11:15:08 +0200 
+%% Created for art at 2014-07-14 13:51:24 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{sonin:2001,
+	Author = {Ain A. Sonin},
+	Date-Added = {2014-07-14 11:49:00 +0000},
+	Date-Modified = {2014-07-14 11:51:24 +0000},
+	Publisher = {MIT Press},
+	Title = {The Physical Basis of Dimensional Analysis},
+	Year = {2001}}
+
+@book{cohen:2010,
+	Author = {Harold Cohen},
+	Date-Added = {2014-07-14 11:01:00 +0000},
+	Date-Modified = {2014-07-14 11:03:14 +0000},
+	Publisher = {Springer},
+	Title = {Numerical Approximation Methods},
+	Year = {2010}}
 
 @book{sanjoy:2010,
 	Author = {Sanjoy Mahajan},
