--- a/fuel-energy/doc/references.bib
+++ b/fuel-energy/doc/references.bib
@@ -2,12 +2,68 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-06-24 11:15:08 +0200 
+%% Created for art at 2014-07-14 09:12:04 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{ophardt:bornhaner,
+	Author = {Charles E. Ophardt},
+	Date-Added = {2014-07-14 07:10:41 +0000},
+	Date-Modified = {2014-07-14 07:12:04 +0000},
+	Month = {July},
+	Title = {Energy of Combustion},
+	Url = {http://www.elmhurst.edu/~chm/vchembook/512energycombust.html},
+	Year = {2014}}
+
+@misc{ohiostate:combustion,
+	Author = {Ohio State University},
+	Date-Added = {2014-07-14 07:08:38 +0000},
+	Date-Modified = {2014-07-14 07:09:53 +0000},
+	Month = {July},
+	Title = {Getting Energy from Combustion},
+	Url = {http://www.physics.ohio-state.edu/~wilkins/energy/Resources/Lectures/combenergy-land.html},
+	Year = {2014},
+	Bdsk-Url-1 = {http://upload.wikimedia.org/wikipedia/commons/c/c6/Energy_density.svg}}
+
+@misc{elert:methane,
+	Author = {Edited by Glenn Elert},
+	Date-Added = {2014-07-14 07:06:35 +0000},
+	Date-Modified = {2014-07-14 07:07:30 +0000},
+	Month = {July},
+	Title = {Energy Density of Methane},
+	Url = {http://hypertextbook.com/facts/2004/BillyWan.shtml},
+	Year = {2014},
+	Bdsk-Url-1 = {http://upload.wikimedia.org/wikipedia/commons/c/c6/Energy_density.svg}}
+
+@book{weinstein:2008,
+	Author = {Lawrence Weinstein and John A. Adam},
+	Date-Added = {2014-07-14 07:03:49 +0000},
+	Date-Modified = {2014-07-14 07:05:32 +0000},
+	Publisher = {Princeton University Press},
+	Title = {Guesstimation},
+	Year = {2008}}
+
+@misc{wiki:foodenergy,
+	Author = {Wikipedia, the free encyclopedia},
+	Date-Added = {2014-07-14 07:02:18 +0000},
+	Date-Modified = {2014-07-14 07:02:18 +0000},
+	Month = {July},
+	Title = {Specific energy},
+	Url = {http://en.wikipedia.org/wiki/Specific_energy#Energy_density_of_food},
+	Year = {2014},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Specific_energy#Energy_density_of_food}}
+
+@misc{wiki:energyspectrum,
+	Author = {Wikipedia, the free encyclopedia},
+	Date-Added = {2014-07-14 06:59:34 +0000},
+	Date-Modified = {2014-07-14 07:02:58 +0000},
+	Month = {July},
+	Title = {Specific energy},
+	Url = {http://upload.wikimedia.org/wikipedia/commons/c/c6/Energy_density.svg},
+	Year = {2014}}
 
 @book{sanjoy:2010,
 	Author = {Sanjoy Mahajan},
