--- a/fuel-energy/fuel-energy.tex
+++ b/fuel-energy/fuel-energy.tex
@@ -23,13 +23,13 @@
 \addcontentsline{toc}{chapter}{Contents}
 
 %\include{doc/summary}
-\include{doc/combustion}
+\include{doc/fuel-energy}
 
-%\phantomsection
-%\bibliographystyle{plainnat}\label{biblio}
-%\addcontentsline{toc}{chapter}{Referencias}
-%\renewcommand{\bibname}{Referencias}
-%\bibliography{doc/references}
+\phantomsection
+\bibliographystyle{plainnat}\label{biblio}
+\addcontentsline{toc}{chapter}{References}
+\renewcommand{\bibname}{References}
+\bibliography{doc/references}
 %
 %\appendix
 %
