--- a/estimations/auxs/docinfo.tex
+++ b/estimations/auxs/docinfo.tex
@@ -1,7 +1,7 @@
 % docinfo
 
-\newcommand{\docTitle}{Fuel energy\xspace}
-\newcommand{\docSubtitle}{Estimating fuel energy\xspace}
+\newcommand{\docTitle}{Estimations\xspace}
+\newcommand{\docSubtitle}{Estimations of several physical properties\xspace}
 
 \newcommand{\docAuthor}{Diego Herrera}
 \newcommand{\docAuthorEmail}{office@simurgh.at}
