--- a/first-derivative/auxs/docinfo.tex
+++ b/first-derivative/auxs/docinfo.tex
@@ -1,7 +1,7 @@
 % docinfo
 
-\newcommand{\docTitle}{Fuel energy\xspace}
-\newcommand{\docSubtitle}{Estimating fuel energy\xspace}
+\newcommand{\docTitle}{First derivative\xspace}
+\newcommand{\docSubtitle}{Value approximation with the first derivate\xspace}
 
 \newcommand{\docAuthor}{Diego Herrera}
 \newcommand{\docAuthorEmail}{office@simurgh.at}
