first commit, typos

--- a/lagrange/lagrange.tex
+++ b/lagrange/lagrange.tex
@@ -1,22 +1,49 @@
-\RequirePackage{fix-cm}
-\documentclass[9pt,a4paper,reqno]{amsart}
+\RequirePackage{fix-cm}                % fixes cm calcs
+\RequirePackage{fixltx2e}              % fixes some LaTeX stuff
+\RequirePackage[l2tabu, orthodox]{nag} % old packages checker
 
-\RequirePackage{./preambule/rmbdarticle}
-\RequirePackage{./preambule/rmbdmath}
-\RequirePackage{./preambule/rmbdphysics}
-\input{./preambule/docinfo}
+\documentclass[twoside=false, open=right, titlepage, numbers=noenddot, 
+               headinclude, fontsize=10pt, paper=a4, footinclude, 
+               abstract=off, cleardoublepage=empty]{scrreprt}
+
+\input{aux/docinfo}
+\RequirePackage{aux/minionstyle}
+\RequirePackage{aux/preambule}
+\RequirePackage{aux/lingo}
+\RequirePackage{aux/math}
+\RequirePackage{aux/physics}
+
+\hyphenation{non-dimen-sion-a-lize}
 
 \begin{document}
-\input{./sections/abstract}
-\maketitle
-\tableofcontents
-\input{./sections/lagrange}
-\input{./sections/hamilton}
 
-\appendix
-\input{./sections/summation}
+  \frenchspacing
+  \pagenumbering{arabic}
+  \pagestyle{plain}
+  %\include{aux/halftitle}
+  %\include{aux/title}
+  %\include{aux/copyright}
+  \pagestyle{scrheadings}
+  %\tableofcontents
+  %\addcontentsline{toc}{chapter}{Contents}
 
-%\bibliographystyle{plainnat}
-%\bibliography{./sections/biblio}
+  %\include{doc/summary}
+  \include{doc/action}
+  \include{doc/lagrangian}
+
+  \phantomsection
+  \bibliographystyle{aipnum4-1}\label{biblio}
+  \addcontentsline{toc}{chapter}{References}
+  \renewcommand{\bibname}{References}
+  \setbibpreamble{
+    \docepigraph{Standing on the shoulder of giants}
+      {Newton}{newton:wikiquote}
+  }
+  \bibliography{doc/references}
+
+  \appendix
+  \include{doc/quotes}
+
+  \include{aux/revision} % Update!
 
 \end{document}
