--- a/monte-carlo/monte-carlo.tex
+++ b/monte-carlo/monte-carlo.tex
@@ -37,7 +37,8 @@
   \bibliography{doc/references}
 
   \appendix
-  \include{doc/code}
+  \include{doc/procedural}
+  \include{doc/oop}
   %\include{doc/quotes}
 
   %\include{aux/revision} % Update!
